Changed primary colors and fixed flickering on page background change when reloaded

--- a/core/static/assets/scss/black-dashboard/custom/_sidebar-and-main-panel.scss
+++ b/core/static/assets/scss/black-dashboard/custom/_sidebar-and-main-panel.scss
@@ -15,13 +15,11 @@
   -o-transition: background-color 1000ms linear;
   -ms-transition: background-color 1000ms linear;
   transition: background-color 1000ms linear;
-  background: none;
 }
 
 .sidebar-wrapper ul li div.collapse ul li div.collapse ul li a,
 .sidebar-wrapper ul li div.collapse ul li div.collapsing ul li a,
 .sidebar-wrapper ul li div.collapsing ul li div.collapse ul li a{
-
   margin-left: 25px;
 
 }
